# tokio-ffi-test

./: .envrc  .gitignore  .lazy.lua  CMakeLists.txt  flake.nix  result
crates/: Cargo.toml
crates/ffi/: Cargo.toml  build.rs
crates/ffi/include/task-ffi/: task.hpp  types.hpp  util.hpp
crates/ffi/include/tasks-ffi/: tasks.hpp  types.hpp
crates/ffi/src/: error.rs  ffi.cc  ffi.h  ffi.rs  functor.cc  functor.h  impl.cpp  lib.rs  manager.rs  net.rs  sync.h  task.cpp  task.rs  tasks.cpp  tasks.rs
crates/ffi/templates/: box.stpl  slice.stpl  std-option-Option.stpl  std-string-String.stpl  std-vec-Vec.stpl
crates/ffi/zng/: closures.zng  ffi.zng  main.zng  optionals.zng  std.zng  tasks.zng  tokio.zng
src/: TaskWatcher.cpp  TaskWatcher.hpp  app.cpp  app.hpp  main.cpp  main.ui  window.cpp  window.hpp
