[workspace]
resolver = "2"
members = ["ffi"]

[workspace.dependencies]
cxx = "1.0.158"
cxx-build = "1.0.158"
tokio = "1.44.2"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "http2",
  "gzip",
  "brotli",
  "zstd",
  "deflate",
  "json",
  "multipart",
  "stream",
  "socks",
  "cookies",
  "charset",
] }
