[package]
name = "tokio-ffi-test"
version = "0.1.0"
edition = "2024"

build = "build/build.rs"

[lib]
crate-type=["staticlib", "cdylib"]


[dependencies]
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "net",
  "time",
] }
reqwest = { workspace = true, default-features = false, features = [
  "rustls-tls",
  "http2",
  "gzip",
  "brotli",
  "zstd",
  "deflate",
  "json",
  "multipart",
  "stream",
  "socks",
  "cookies",
  "charset",
] }
thiserror = "2.0.12"
futures-util = {version ="0.3.31", features = ["channel"]}
enum-as-inner = "0.6.1"

[build-dependencies]
cc = "1.0"
build-rs = "0.1.2"
zngur = "0.6.0"
tinytemplate = "1.2.1"
super-seq-macro = "0.3.8"
color-eyre = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
