[package]
name = "tokio-ffi-test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["staticlib", "cdylib"]


[dependencies]
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "net",
  "time",
] }
reqwest = { workspace = true, default-features = false, features = [
  "rustls-tls",
  "http2",
  "gzip",
  "brotli",
  "zstd",
  "deflate",
  "json",
  "multipart",
  "stream",
  "socks",
  "cookies",
  "charset",
] }
thiserror = "2.0.12"
futures-util = {version ="0.3.31", features = ["channel"]}
pin-project = "1.1.10"
tokio-util = { version = "0.7.17", features = ["rt"] }

[build-dependencies]
cc = "1.0"
build-rs = "0.3.2"
zngur = "0.7.0"
# zngur = { git = "https://github.com/HKalbasi/zngur.git", branch = "main" }
zngur-def = "0.7.0"
zngur-parser = "0.7.0"
walkdir = "2.5.0"
tinytemplate = "1.2.1"
indoc = "2.0.7"
serde = { version = "1.0.228", features = ["derive"] }
